Добавил логирование + документировани апи с помощью swagger
