# docs/swagger.json
@@ -1,12 +1,17 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is an API for managing songs.",
+        "title": "Songs API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/",
     "paths": {
         "/info": {
             "get": {
-                "description": "Получение списка песен из базы данных",
+                "description": "Получение списка песен из базы данных с фильтрацией по параметрам",
                 "consumes": [
                     "application/json"
                 ],
@@ -20,17 +25,17 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "Supermassive Black Hole",
                         "description": "Название песни",
                         "name": "song",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
+                        "default": "Muse",
                         "description": "Группа",
                         "name": "group",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
@@ -61,26 +66,90 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/models.Song"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.errorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.errorResponse"
                         }
                     }
                 }
-            },
+            }
+        },
+        "/info/verse": {
+            "get": {
+                "description": "Получение текста конкретного куплета песни",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "songs"
+                ],
+                "summary": "Получение текста куплета песни",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Supermassive Black Hole",
+                        "description": "Название песни",
+                        "name": "song",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "Muse",
+                        "description": "Группа",
+                        "name": "group",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "ID песни",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "example": 1,
+                        "description": "Номер куплета",
+                        "name": "verse",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.resultResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/songs": {
             "put": {
                 "description": "Обновление информации о песне по предоставленным данным",
                 "consumes": [
@@ -100,7 +169,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/EffectiveMobile.Song"
+                            "$ref": "#/definitions/models.Song"
                         }
                     }
                 ],
@@ -108,22 +177,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.resultResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.errorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.errorResponse"
                         }
                     }
                 }
@@ -147,7 +213,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/EffectiveMobile.Song"
+                            "$ref": "#/definitions/models.Song"
                         }
                     }
                 ],
@@ -155,22 +221,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.resultResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.errorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.errorResponse"
                         }
                     }
                 }
@@ -189,12 +252,12 @@
                 "summary": "Удаление песни",
                 "parameters": [
                     {
-                        "description": "Данные песни для удаления. Передайте либо ID, либо название и группу песни",
+                        "description": "Данные песни для удаления",
                         "name": "song",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/EffectiveMobile.Song"
+                            "$ref": "#/definitions/models.Song"
                         }
                     }
                 ],
@@ -202,87 +265,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.resultResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.errorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/info/verse": {
-            "get": {
-                "description": "Получение текста конкретного куплета песни.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "songs"
-                ],
-                "summary": "Получение текста песни",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Название песни",
-                        "name": "song",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Группа",
-                        "name": "group",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "ID песни",
-                        "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Номер куплета. Передайте с ним либо ID, либо название и группу песни",
-                        "name": "verse",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handler.errorResponse"
                         }
                     }
                 }
@@ -290,26 +285,62 @@
         }
     },
     "definitions": {
-        "EffectiveMobile.Song": {
+        "handler.errorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "error description"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "fail"
+                }
+            }
+        },
+        "handler.resultResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                },
+                "text": {
+                    "type": "string",
+                    "example": "description"
+                }
+            }
+        },
+        "models.Song": {
             "type": "object",
             "properties": {
                 "group": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Muse"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "link": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://www.youtube.com/watch?v=Xsp3_a-PMTw"
                 },
                 "release_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-07-19"
                 },
                 "song_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Supermassive Black Hole"
                 },
                 "text": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Ooh baby, don't you know I suffer?\nOoh baby, can you hear me moan?"
                 }
             }
         }
